--- a/public/Buttons/Once-kaur/style.css
+++ b/public/Buttons/Once-kaur/style.css
@@ -1,4 +1,8 @@
 html {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
   box-sizing: border-box;
   font-family: 'Arial', sans-serif;
   font-size: 100%;
